--- a/client/src/components/Pages/Login/Login.css
+++ b/client/src/components/Pages/Login/Login.css
@@ -7,19 +7,27 @@
     margin: auto;
     width: 40%;
     height: 70%;
-    padding: 0.1em;
     border: 0.5em solid var(--secondary-color);
+}
+
+.form-background form{
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .form-background h1 {
     font-size: 4em;
     margin: 0;
+    padding: 0;
 }
 
 .form-sections{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 2em;
 }
 
 .form-sections label {
@@ -31,7 +39,19 @@
     appearance: none;
     font-size: 1.5em;
     height: 1.5em;
-    margin-bottom: 2em;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 3px 5px, rgba(0, 0, 0, 0.23) 0px 2px 4px 0px inset;
+}
+
+.form-sections p {
+    margin:0em;
+    text-align: center;
+    text-decoration: underline;
+    margin-top: 1em;
+}
+
+.form-sections p:hover {
+    color:var(--secondary-color);
+    scale: 1.05;
+    transition: var(--animation-effect);
 }
